Fix incorrect aspect ratio and text contrast

--- a/styles/global.css
+++ b/styles/global.css
@@ -93,6 +93,10 @@ p {
   color: var(--primary);
 }
 
+.text-primary-dark {
+  color: hsl(205, 100%, 31%);
+}
+
 .text-center {
   text-align: center;
 }
